--- a/css/main.css
+++ b/css/main.css
@@ -9,7 +9,7 @@ body {
     background: #000000 linear-gradient(to right,#000000,#000000 );
 }
 
-html {
+body {
     overflow-x: hidden !important;
 }
 
