--- a/css/main.css
+++ b/css/main.css
@@ -1,6 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 html, body {
     width: 100%;
+    height: 100%;
 }
 body {
     font-family: raleway,Helvetica,Arial,sans-serif;
@@ -165,17 +166,10 @@ a:visited {
 
 .fixed-nav-img img {
     position: absolute;
-    top: 50%;
-    left: 50%;
-    min-width: 100% !important;
-    min-height: 100%;
-    width: auto;
-    height: auto;
     z-index: -100;
-    transform: translateX(-50%) translateY(-50%);
-    background-size: cover;
     transition: 1s opacity;
-    opacity: 0.3;
+    opacity: 0.8;
+    height: 99%;
 }
 
 .animationdelay1s{
