--- a/css/main.css
+++ b/css/main.css
@@ -10,6 +10,17 @@ body {
     background: #000000 linear-gradient(to right,#000000,#000000 );
 }
 
+.banner-nav-img {
+    /* The image used */
+    background-image: url('https://steve2312.github.io/antecer/1.jpg');
+    /* Full height */
+    height: 100%;
+    /* Center and scale the image nicely */
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
 hr {
     width: 100%;
     opacity: 0.5;
