--- a/css/main.css
+++ b/css/main.css
@@ -187,6 +187,26 @@ a:visited {
     max-height: 100%;
 }
 
+.bgoof {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    min-width: 100%;
+    min-height: 100%;
+    width: auto;
+    height: auto;
+    z-index: -100;
+    transform: translateX(-50%) translateY(-50%) scale(1.1);
+    background-size: cover;
+    transition: 1s opacity;
+    -webkit-filter: blur(5px);
+    -moz-filter: blur(5px);
+    -o-filter: blur(5px);
+    -ms-filter: blur(5px);
+    filter: blur(5px);
+    opacity: 0.1;
+}
+
 .animationdelay1s{
     animation-delay: 1s;
 }
