--- a/css/main.css
+++ b/css/main.css
@@ -371,7 +371,7 @@ a:visited {
     }
 
     .marginamusingtext1 {
-        margin-top: 50px;
+        margin-top: 0px;
         transform: scale(0.8);
     }
 
@@ -457,3 +457,13 @@ a:visited {
         -webkit-transition: background 0.3s ease;
         -moz-transition: background 0.3s ease;
     }
+
+.table, .table tr th, .table tr td {
+    border: 1px solid #000000;
+    color: white;
+    text-align: center;
+}
+
+.table {
+    border-collapse: collapse;
+}
