--- a/css/main.css
+++ b/css/main.css
@@ -415,7 +415,7 @@ a:visited {
     vertical-align: middle;
     -ms-touch-action: manipulation;
     touch-action: manipulation;
-    cursor: pointer;
+    cursor: text;
     -webkit-user-select: none;
     -moz-user-select: none;
     -ms-user-select: none;
