Product page *not finished yet*

--- a/css/main.css
+++ b/css/main.css
@@ -503,3 +503,14 @@ a:visited {
         -webkit-transition: background 0.3s ease;
         -moz-transition: background 0.3s ease;
     }
+
+.productcolum {
+    width: 350px;
+    height: 500px;
+    background: rgba(0,0,0, 0.8);
+    margin: 10px;
+    border-radius: 20px;
+}
+.productcolum img {
+    border-radius: 20px 20px 0px 0px;
+}
