--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 html, body {
     width: 100%;
-    height: auto;
+    height: 100%;
 }
 body {
     font-family: raleway,Helvetica,Arial,sans-serif;
@@ -13,13 +13,24 @@ body {
 
 .banner-nav-img {
     /* The image used */
-    background-image: linear-gradient(transparent, transparent, #000000), url("../images/1.jpg");
-    /* Full height */
-    width: 100%;
-    /* Center and scale the image nicely */
+    background-image: linear-gradient(#000000, transparent, #000000), url("../images/3.jpg");
+    /* Set a specific height */
+    margin-top: 40px;
+    height: 50vw;
+    /* Position and center the image to scale nicely on all screens */
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
+    position: relative;
+    z-index: 1;
+}
+
+#particles-js {
+    position: absolute;
+    height: 330px;
+    min-width: 100%;
+    opacity: 0.8;
+    white-space: nowrap;
 }
 
 hr {
@@ -308,42 +319,6 @@ a:hover{
     }
 }
 
-.logo {
-    width: 90%;
-}
-
-.marginlogo {
-    margin-top: 100px;
-}
-
-.marginamusingtext1 {
-    margin-top: 250px;
-    transform: scale(0.9);
-    white-space: nowrap;
-}
-
-@media only screen and (max-width: 1199px) {
-    .logo {
-        width: 80%;
-    }
-
-    .marginamusingtext1 {
-        margin-top: 150px;
-        transform: scale(0.8);
-    }
-}
-
-@media only screen and (max-width: 992px) {
-    .logo {
-        width: 50%;
-    }
-
-    .marginamusingtext1 {
-        margin-top: 0px;
-        transform: scale(0.6);
-    }
-}
-
 /*Driver Support*/
 .downloaddriver {
     transform: scale(1);
@@ -370,18 +345,6 @@ a:hover{
 }
 
 @media only screen and (max-width: 767px) {
-    .logo {
-        width: 60%;
-    }
-
-    .marginamusingtext1 {
-        margin-top: 0px;
-        transform: scale(0.8);
-    }
-
-    .marginlogo {
-        margin-top: 50px;
-    }
 
     .downloaddriver {
         transform: scale(0.8);
