--- a/css/animate.css
+++ b/css/animate.css
@@ -24,6 +24,12 @@
     animation-delay: 0.6s;
 }
 
+.animatedloop {
+    animation-duration: 4s;
+    animation-fill-mode: both;
+    animation-iteration-count: infinite;
+}
+
 .animated.infinite {
   animation-iteration-count: infinite;
 }
