--- a/css/main.css
+++ b/css/main.css
@@ -1,7 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
 html, body {
     width: 100%;
-    height: 100%;
+    height: auto;
 }
 body {
     font-family: raleway,Helvetica,Arial,sans-serif;
@@ -511,7 +511,7 @@ a:hover{
     position: absolute;
     z-index: 1;
     margin-top: 30px;
-    background-color: rgba(255,255,255, 0.1) !important;
+    background-color: rgba(27, 27, 27, 0.91) !important;
     border-radius: 5px;
     padding: 10px;
     visibility: hidden;
@@ -520,3 +520,22 @@ a:hover{
 #flag2:hover ~ .hovertext2 {
     visibility: visible;
 }
+
+.changecountrytab img {
+    height: 13px;
+    margin: 5px;
+}
+
+.changecountrytab a {
+    margin: 5px;
+    font-size: 13px !important;
+}
+
+.changecountrytab {
+    margin: 2px;
+}
+
+    .changecountrytab a:hover {
+        text-decoration:underline !important;
+        cursor: pointer;
+    }
