--- a/css/main.css
+++ b/css/main.css
@@ -1,4 +1,6 @@
 @import url('https://fonts.googleapis.com/css?family=Raleway');
+@import url('https://fonts.googleapis.com/css?family=Noto+Sans&display=swap');
+
 html, body {
     width: 100%;
     height: auto;
@@ -25,6 +27,30 @@ body {
     z-index: 1;
 }
 
+.banner-nav-text {
+    min-width: 300px;
+    max-width: 600px;
+    height: auto;
+    text-align: center;
+    position: absolute;
+    top: 45%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    color: white;
+    background-color: rgba(0, 0, 0, 0.4);
+    padding-top: 20px;
+    padding-bottom: 20px;
+    padding-left: 60px;
+    padding-right: 60px;
+    font-family: 'Noto Sans', sans-serif !important;
+}
+
+.module {
+    background-repeat: no-repeat;
+    background-position: 0% 0%, 100% 0%, 100% 100%, 0% 100%;
+    background-size: 1.25em 1.25em, 1.25em 1.25em, 1.25em 1.25em, 1.25em 1.25em;
+    background-image: url("data:image/svg+xml;charset=utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 viewBox=%220 0 40 40%22%3E%3Cpolygon points=%2240 0 8 0 0 0 0 8 0 40 8 40 8 8 40 8 40 0%22 fill=%22white%22 %2F%3E%3C%2Fsvg%3E"), url("data:image/svg+xml;charset=utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 viewBox=%220 0 40 40%22%3E%3Cpolygon points=%2240 0 8 0 0 0 0 8 0 40 8 40 8 8 40 8 40 0%22 fill=%22white%22 transform=%22translate(40, 0) rotate(90)%22 %2F%3E%3C%2Fsvg%3E"), url("data:image/svg+xml;charset=utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 viewBox=%220 0 40 40%22%3E%3Cpolygon points=%2240 0 8 0 0 0 0 8 0 40 8 40 8 8 40 8 40 0%22 fill=%22white%22 transform=%22translate(40, 40) rotate(180)%22 %2F%3E%3C%2Fsvg%3E"), url("data:image/svg+xml;charset=utf8,%3Csvg xmlns=%22http:%2F%2Fwww.w3.org%2F2000%2Fsvg%22 viewBox=%220 0 40 40%22%3E%3Cpolygon points=%2240 0 8 0 0 0 0 8 0 40 8 40 8 8 40 8 40 0%22 fill=%22white%22 transform=%22translate(0, 40) rotate(270)%22 %2F%3E%3C%2Fsvg%3E");
+}
 .scrolldownarrow {
     position: absolute;
     transform: translateX(-50%) translateY(-200%);
@@ -539,3 +565,17 @@ a:hover{
         text-decoration:underline !important;
         cursor: pointer;
     }
+
+@keyframes animateGlow {
+    0% {
+        background-position: 0% 50%;
+    }
+
+    50% {
+        background-position: 100% 50%;
+    }
+
+    100% {
+        background-position: 0% 50%;
+    }
+}
