--- a/css/main.css
+++ b/css/main.css
@@ -13,6 +13,15 @@ body {
     overflow-x: hidden;
 }
 
+#rQuote {
+    -webkit-transition: opacity .9s ease-in-out;
+    -moz-transition: opacity .9s ease-in-out;
+    -ms-transition: opacity .9s ease-in-out;
+    -o-transition: opacity .9s ease-in-out;
+    transition: opacity .9s ease-in-out;
+    font-size: 6vw;
+}
+
 .banner-nav-img {
     /* The image used */
     background-image: linear-gradient(#000000, transparent, #000000), url("../images/5.jpg");
@@ -28,21 +37,15 @@ body {
 }
 
 .banner-nav-text {
-    min-width: 300px;
-    max-width: 600px;
-    height: auto;
     text-align: center;
     position: absolute;
     top: 45%;
     left: 50%;
     transform: translate(-50%, -50%);
     color: white;
-    background-color: rgba(0, 0, 0, 0.4);
-    padding-top: 20px;
-    padding-bottom: 20px;
-    padding-left: 60px;
-    padding-right: 60px;
     font-family: 'Noto Sans', sans-serif !important;
+    min-width: 90%;
+    text-shadow: 0px 0px 15px black;
 }
 
 .module {
@@ -383,6 +386,10 @@ a:hover{
     .dropnavigation {
         display: inline-flex;
     }
+
+    #rQuote {
+        font-size: 8vw;
+    }
 }
 
 @media only screen and (max-width: 767px) {
@@ -399,6 +406,11 @@ a:hover{
     #particles-js {
         height: 523px;
     }
+
+    #rQuote {
+        font-size: 10vw;
+    }
+
 }
 
 .keypadall img{
