--- a/css/main.css
+++ b/css/main.css
@@ -24,7 +24,7 @@ body {
 
 .banner-nav-img {
     /* The image used */
-    background-image: linear-gradient(#000000, transparent, #000000), url("../images/20_edited.jpg");
+    background-image: linear-gradient(#000000, transparent, #000000), url("../images/5new.jpg");
     /* Set a specific height */
     margin-top: 40px;
     height: 100%;
