--- a/customization/test.css
+++ b/customization/test.css
@@ -56,13 +56,11 @@ body {
 		height: 297mm;
 	}
 	body>*{
-		top: -1000cm;
+		opacity: 0 !important; /*hide other nodes*/
 	}
 	.page {
+		opacity: 1 !important; /*only show page nodes*/
 		margin: 0;
-		top: 0;
-		border: initial;
-		border-radius: initial;
 		width: initial;
 		min-height: initial;
 		box-shadow: initial;
