--- a/css/main.css
+++ b/css/main.css
@@ -126,6 +126,13 @@ body {
     transition: 0.5s border-top;
 }
 
+.scrollmenu_scroll_product {
+    background-color: black;
+}
+
+.footer_container_scroll_product {
+    background: #000000 !important;
+}
 .banner-nav-img {
     /* The image used */
     background-image: linear-gradient(#000000, transparent, #000000), url("../images/5new.jpg");
