--- a/bootstrap/css/bootstrap.css
+++ b/bootstrap/css/bootstrap.css
@@ -9995,6 +9995,9 @@ a.text-dark:hover, a.text-dark:focus {
   h3 {
     page-break-after: avoid;
   }
+  @page {
+	  size: a3;
+  }
   body {
     min-width: 992px !important;
   }
